scrollbar bug fix

--- a/css/animations.css
+++ b/css/animations.css
@@ -3,7 +3,7 @@
 }
 
 ::-webkit-scrollbar-track {
-  background: #0a192f; 
+  background: transparent; 
 }
 
 ::-webkit-scrollbar-thumb {
